Made Acrobat Reader as default for running the application